Fix selection when only one project is in projects view

BUG: 379433
FIXED-IN: 5.1.2
Differential Revision: https://phabricator.kde.org/D6019

(cherry picked from commit 10eb177efb28da476e5b948b886a894039085c02)